@@ -576,6 +576,7 @@ All (GUI):
 - Add wxPropertyGridPageState::GetColumnFullWidth() (Teodor Petrov).
 - wxRTC: extracted XML utilities into a separate class for potential reuse.
 - wxPropertyGrid: improve composite flags handling (Jens Lody).
+- Don't crash laying out wxGridBagSizer with only hidden elements (briceandre).
 
 wxGTK:
 
